EASYOPAC-667 - Make icons smaller and js fix for covers on item page.

--- a/sass/style4x.scss
+++ b/sass/style4x.scss
@@ -8,6 +8,25 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.ting-object .view-mode-collection-list {
+  box-sizing: border-box;
+  word-wrap: break-word;
+  float: left;
+  margin-left: 0%;
+  padding-right: 10px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  word-wrap: break-word;
+
+  .ting-cover {
+    min-height: 60px;
+    position: relative;
+    width: 100% !important;
+  }
+}
 .work-cover-selector {
   display: inline-block;
   padding-top: 10px;
@@ -34,14 +53,14 @@
       font-variant: normal;
       text-transform: none;
       line-height: 1;
-      font-size: 32px;
+      font-size: 20px;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
   }
 
   .cover-front {
-    margin-right: 20px;
+    margin-right: 10px;
 
     &:before {
       content: "\e919";
@@ -52,9 +71,9 @@
       font-variant: normal;
       text-transform: none;
       line-height: 1;
+      font-size: 20px;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      font-size: 32px;
     }
   }
 }
